@@ -1,5 +1,6 @@
 Changes for 1.8.4rc1
 
+ - [ZBX-3069] renamed monitoring graphs combobox "All" entry to "not selected" (Vedmak)
  - [ZBX-3070] fixed event date format inconsistency (Vedmak)
  - [ZBX-2872] greatly improved API methods consistency (Aly)
  - [ZBX-3068] fixed possible crash of server while processing passive proxies (Sasha)
